added names for each of techniques, need to update descriptions and videos for most

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,8 @@
         </activity>
         <activity android:name=".BlackBelt" android:label="BackBeltLabel">
         </activity>
+        <activity android:name=".Technique" android:label="TechniqueLabel">
+        </activity>
     </application>
 
 </manifest>
